updated data table

--- a/examples/hide-show/hide-show-1/hide-show-1.html
+++ b/examples/hide-show/hide-show-1/hide-show-1.html
@@ -43,9 +43,7 @@
         <table aria-labelledby="id_data_label">
           <thead>
             <tr>
-              <th>Date</th>
-              <th>Latitude</th>
-              <th>Longitude</th>
+              <th>Approximate Date</th>
               <th>Location</th>
               <th>Size of Army</th>
               <th>Tempature C</th>
@@ -55,148 +53,61 @@
           </thead>
           <tbody>
             <tr>
-              <td></td><td>24.0</td><td>54.9</td><td>Kowno River</td><td>340000</td><td></td><td></td><td>Advance</td>
+              <td>June 24th</td><td>Kowno River</td><td>442,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td></td><td>24.5</td><td>55.0</td><td></td><td>340000</td><td></td><td></td><td>Advance</td>
+              <td>June 30th</td><td>Wilna</td><td>400,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td></td><td> 25.5</td><td>54.5</td><td>Wilna</td><td>340000</td><td></td><td></td><td>Advance</td>
+              <td>na</td><td>Witebsk</td><td>175,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td></td><td> 26.0</td><td>54.7</td><td>Smorgoni</td><td>320000</td><td></td><td></td><td>Advance</td>
+              <td>August 16th</td><td>Smolensk</td><td>145,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td></td><td> 27.0</td><td>54.8</td><td>Molodexno</td><td>300000</td><td></td><td></td><td>Advance</td>
+              <td>na</td><td>Chjat</td><td>127,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td></td><td> 28.0</td><td>54.9</td><td>Studienska</td><td>280000</td><td></td><td></td><td>Advance</td>
+              <td>September 7th</td><td>Mojaisk</td><td>100,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td></td><td> 28.5</td><td>55.0</td><td>Polotzk</td><td>240000</td><td></td><td></td><td>Advance</td>
+              <td>September 14th</td><td>Moscow</td><td>100,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td></td><td> 29.0</td><td>55.1</td><td></td><td>210000</td><td></td><td></td><td>Advance</td>
+              <td>October 18th</td><td>Malo-jarosewli</td><td>96,000</td><td>0</td><td>32</td><td>Retreat</td>
             </tr>
             <tr>
-              <td></td><td> 30.0</td><td>55.2</td><td></td><td>180000</td><td></td><td></td><td>Advance</td>
+              <td>October 24th</td><td>Mojaisk</td><td>87,000</td><td>0</td><td>32</td><td>Retreat</td>
             </tr>
             <tr>
-              <td></td><td> 30.3</td><td>55.3</td><td></td><td>175000</td><td></td><td></td><td>Advance</td>
+              <td>na</td><td>Wirma</td><td>55,000</td><td>na</td><td>na</td><td>Retreat</td>
             </tr>
             <tr>
-              <td></td><td> 32.0</td><td>54.8</td><td></td><td>145000</td><td></td><td></td><td>Advance</td>
+              <td>November 14th</td><td>Smolensk</td><td>37,000</td><td>-26</td><td>-13</td><td>Retreat</td>
             </tr>
             <tr>
-              <td></td><td> 33.2</td><td>54.9</td><td></td><td>140000</td><td></td><td></td><td>Advance</td>
+              <td>na</td><td>Orscha</td><td>24,000</td><td>na</td><td>na</td><td>Retreat</td>
             </tr>
             <tr>
-              <td></td><td> 34.4</td><td>55.5</td><td></td><td>127100</td><td></td><td></td><td>Advance</td>
+              <td>na</td><td>Botr<td>20,000</td><td>-14</td><td>-7</td><td>Retreat</td>
             </tr>
             <tr>
-              <td></td><td> 35.5</td><td>55.4</td><td></td><td>100000</td><td></td><td></td><td>Advance</td>
+              <td>December 1st</td><td>Studienska (reinforcements arrive)</td><td>50,000</td><td>-25</td><td>-13</td><td>Retreat</td>
             </tr>
             <tr>
-              <td></td><td> 36.0</td><td>55.5</td><td></td><td>100000</td><td></td><td></td><td>Advance</td>
+              <td>December 1st</td><td>Minsk</td><td>28,000</td><td>-30</td><td>-22</td><td>Retreat</td>
             </tr>
             <tr>
-              <td></td><td> 37.6</td><td>55.8</td><td></td><td>100000</td><td></td><td></td><td>Retreat</td>
+              <td>December 6th</td><td>Moloderno</td><td>28,000</td><td>-38</td><td>-34</td><td>Retreat</td>
             </tr>
             <tr>
-              <td></td><td> 37.5</td><td>55.7</td><td></td><td>98000</td><td></td><td></td><td>Retreat</td>
+              <td>December 7th</td><td>Smorgeni</td><td>12,000</td><td>-33</td><td>-27</td><td>Retreat</td>
             </tr>
             <tr>
-              <td></td><td> 37.0</td><td>55.0</td><td></td><td>97000</td><td></td><td></td><td>Retreat</td>
+              <td>na</td><td>Wilna</td><td>8,000</td><td>na</td><td>na</td><td>Retreat</td>
             </tr>
             <tr>
-              <td></td><td> 36.8</td><td>55.0</td><td></td><td>96000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 35.4</td><td>55.3</td><td></td><td>87000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 34.3</td><td>55.2</td><td></td><td>55000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 33.3</td><td>54.8</td><td></td><td>37000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 32.0</td><td>54.6</td><td></td><td>24000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 30.4</td><td>54.4</td><td></td><td>20000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 29.2</td><td>54.4</td><td></td><td>20000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 28.5</td><td>54.3</td><td></td><td>20000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 28.3</td><td>54.4</td><td></td><td>20000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 24.0</td><td>55.1</td><td></td><td>60000</td><td></td><td></td><td>Advance</td>
-            </tr>
-            <tr>
-              <td></td><td> 24.5</td><td>55.2</td><td></td><td>60000</td><td></td><td></td><td>Advance</td>
-            </tr>
-            <tr>
-              <td></td><td> 25.5</td><td>54.7</td><td></td><td>60000</td><td></td><td></td><td>Advance</td>
-            </tr>
-            <tr>
-              <td></td><td> 26.6</td><td>55.7</td><td></td><td>40000</td><td></td><td></td><td>Advance</td>
-            </tr>
-            <tr>
-              <td></td><td> 27.4</td><td>55.6</td><td></td><td>33000</td><td></td><td></td><td>Advance</td>
-            </tr>
-            <tr>
-              <td></td><td> 28.7</td><td>55.5</td><td></td><td>30000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 29.2</td><td>54.3</td><td></td><td>30000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 28.5</td><td>54.2</td><td></td><td>30000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 28.3</td><td>54.3</td><td></td><td>28000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 27.5</td><td>54.5</td><td></td><td>20000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 26.8</td><td>54.3</td><td></td><td>12000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 26.4</td><td>54.4</td><td></td><td>14000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 24.6</td><td>54.5</td><td></td><td>8000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 24.4</td><td>54.4</td><td></td><td>4000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 24.2</td><td>54.4</td><td></td><td>4000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 24.1</td><td>54.3</td><td></td><td>4000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 24.0</td><td>55.2</td><td></td><td>22000</td><td></td><td></td><td>Advance</td>
-            </tr>
-            <tr>
-              <td></td><td> 24.5</td><td>55.3</td><td></td><td>22000</td><td></td><td></td><td>Advance</td>
-            </tr>
-            <tr>
-              <td></td><td> 24.6</td><td>55.8</td><td></td><td>6000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 24.2</td><td>54.4</td><td></td><td>6000</td><td></td><td></td><td>Retreat</td>
-            </tr>
-            <tr>
-              <td></td><td> 24.1</td><td>54.3</td><td>Kowno River</td><td>6000</td><td></td><td></td><td>Retreat</td>
+              <td>December 14th</td><td>Kowno (reinforcements arrive)</td><td>10,000</td><td>na</td><td>na</td><td>Retreat</td>
             </tr>
           </tbody>
         </table>
