--- a/examples/hide-show/hide-show-1/hide-show-1.html
+++ b/examples/hide-show/hide-show-1/hide-show-1.html
@@ -43,12 +43,12 @@
         <table aria-labelledby="id_data_label">
           <thead>
             <tr>
-              <th>Approximate Date</th>
-              <th>Location</th>
-              <th>Size of Army</th>
-              <th>Tempature C</th>
-              <th>Tempature F</th>
-              <th>Direction</th>
+              <th scope="col">Approximate Date</th>
+              <th scope="col">Location</th>
+              <th scope="col">Size of Army</th>
+              <th scope="col">Tempature C</th>
+              <th scope="col">Tempature F</th>
+              <th scope="col">Direction</th>
             </tr>
           </thead>
           <tbody>
