--- a/examples/hide-show/hide-show-1/hide-show-1.html
+++ b/examples/hide-show/hide-show-1/hide-show-1.html
@@ -43,8 +43,8 @@
         <table aria-labelledby="id_data_label">
           <thead>
             <tr>
-              <th scope="col">Approximate Date</th>
               <th scope="col">Location</th>
+              <th scope="col">Approximate Date</th>
               <th scope="col">Size of Army</th>
               <th scope="col">Tempature C</th>
               <th scope="col">Tempature F</th>
@@ -53,61 +53,61 @@
           </thead>
           <tbody>
             <tr>
-              <td>June 24th</td><td>Kowno River</td><td>442,000</td><td>na</td><td>na</td><td>Advance</td>
+              <td>Kowno River</td><td>June 24th</td><td>442,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td>June 30th</td><td>Wilna</td><td>400,000</td><td>na</td><td>na</td><td>Advance</td>
+              <td>Wilna</td><td>June 30th</td><td>400,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td>na</td><td>Witebsk</td><td>175,000</td><td>na</td><td>na</td><td>Advance</td>
+              <td>Witebsk</td><td>na</td><td>175,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td>August 16th</td><td>Smolensk</td><td>145,000</td><td>na</td><td>na</td><td>Advance</td>
+              <td>Smolensk</td><td>August 16th</td><td>145,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td>na</td><td>Chjat</td><td>127,000</td><td>na</td><td>na</td><td>Advance</td>
+              <td>Chjat</td><td>na</td><td>127,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td>September 7th</td><td>Mojaisk</td><td>100,000</td><td>na</td><td>na</td><td>Advance</td>
+              <td>Mojaisk</td><td>September 7th</td><td>100,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td>September 14th</td><td>Moscow</td><td>100,000</td><td>na</td><td>na</td><td>Advance</td>
+              <td>Moscow</td><td>September 14th</td><td>100,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td>October 18th</td><td>Malo-jarosewli</td><td>96,000</td><td>0</td><td>32</td><td>Retreat</td>
+              <td>Malo-jarosewli</td><td>October 18th</td><td>96,000</td><td>0</td><td>32</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>October 24th</td><td>Mojaisk</td><td>87,000</td><td>0</td><td>32</td><td>Retreat</td>
+              <td>Mojaisk</td><td>October 24th</td><td>87,000</td><td>0</td><td>32</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>na</td><td>Wirma</td><td>55,000</td><td>na</td><td>na</td><td>Retreat</td>
+              <td>Wirma</td><td>na</td><td>55,000</td><td>na</td><td>na</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>November 14th</td><td>Smolensk</td><td>37,000</td><td>-26</td><td>-13</td><td>Retreat</td>
+              <td>Smolensk</td><td>November 14th</td><td>37,000</td><td>-26</td><td>-13</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>na</td><td>Orscha</td><td>24,000</td><td>na</td><td>na</td><td>Retreat</td>
+              <td>Orscha</td><td>na</td><td>24,000</td><td>na</td><td>na</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>na</td><td>Botr<td>20,000</td><td>-14</td><td>-7</td><td>Retreat</td>
+              <td>Botr<td><td>na</td><td>20,000</td><td>-14</td><td>-7</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>December 1st</td><td>Studienska (reinforcements arrive)</td><td>50,000</td><td>-25</td><td>-13</td><td>Retreat</td>
+              <td>Studienska (reinforcements arrive)</td><td>December 1st</td><td>50,000</td><td>-25</td><td>-13</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>December 1st</td><td>Minsk</td><td>28,000</td><td>-30</td><td>-22</td><td>Retreat</td>
+              <td>Minsk</td><td>December 1st</td><td>28,000</td><td>-30</td><td>-22</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>December 6th</td><td>Moloderno</td><td>28,000</td><td>-38</td><td>-34</td><td>Retreat</td>
+              <td>Moloderno</td><td>December 6th</td><td>28,000</td><td>-38</td><td>-34</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>December 7th</td><td>Smorgeni</td><td>12,000</td><td>-33</td><td>-27</td><td>Retreat</td>
+             <td>Smorgeni</td> <td>December 7th</td><td>12,000</td><td>-33</td><td>-27</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>na</td><td>Wilna</td><td>8,000</td><td>na</td><td>na</td><td>Retreat</td>
+              <td>Wilna</td><td>na</td><td>8,000</td><td>na</td><td>na</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>December 14th</td><td>Kowno (reinforcements arrive)</td><td>10,000</td><td>na</td><td>na</td><td>Retreat</td>
+              <td>Kowno (reinforcements arrive)</td><td>December 14th</td><td>10,000</td><td>na</td><td>na</td><td>Retreat</td>
             </tr>
           </tbody>
         </table>
