--- a/examples/hide-show/hide-show-1/hide-show-1.html
+++ b/examples/hide-show/hide-show-1/hide-show-1.html
@@ -53,61 +53,61 @@
           </thead>
           <tbody>
             <tr>
-              <td>Kowno River</td><td>June 24th</td><td>442,000</td><td>na</td><td>na</td><td>Advance</td>
+              <th scope="row">Kowno River</th><td>June 24th</td><td>442,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td>Wilna</td><td>June 30th</td><td>400,000</td><td>na</td><td>na</td><td>Advance</td>
+              <th scope="row">Wilna</th><td>June 30th</td><td>400,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td>Witebsk</td><td>na</td><td>175,000</td><td>na</td><td>na</td><td>Advance</td>
+              <th scope="row">Witebsk</th><td>na</td><td>175,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td>Smolensk</td><td>August 16th</td><td>145,000</td><td>na</td><td>na</td><td>Advance</td>
+              <th scope="row">Smolensk</th><td>August 16th</td><td>145,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td>Chjat</td><td>na</td><td>127,000</td><td>na</td><td>na</td><td>Advance</td>
+              <th scope="row">Chjat</th><td>na</td><td>127,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td>Mojaisk</td><td>September 7th</td><td>100,000</td><td>na</td><td>na</td><td>Advance</td>
+              <th scope="row">Mojaisk</th><td>September 7th</td><td>100,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td>Moscow</td><td>September 14th</td><td>100,000</td><td>na</td><td>na</td><td>Advance</td>
+              <th scope="row">Moscow</th><td>September 14th</td><td>100,000</td><td>na</td><td>na</td><td>Advance</td>
             </tr>
             <tr>
-              <td>Malo-jarosewli</td><td>October 18th</td><td>96,000</td><td>0</td><td>32</td><td>Retreat</td>
+              <th scope="row">Malo-jarosewli</th><td>October 18th</td><td>96,000</td><td>0</td><td>32</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>Mojaisk</td><td>October 24th</td><td>87,000</td><td>0</td><td>32</td><td>Retreat</td>
+              <th scope="row">Mojaisk</th><td>October 24th</td><td>87,000</td><td>0</td><td>32</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>Wirma</td><td>na</td><td>55,000</td><td>na</td><td>na</td><td>Retreat</td>
+              <th scope="row">Wirma</th><td>na</td><td>55,000</td><td>na</td><td>na</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>Smolensk</td><td>November 14th</td><td>37,000</td><td>-26</td><td>-13</td><td>Retreat</td>
+              <th scope="row">Smolensk</th><td>November 14th</td><td>37,000</td><td>-26</td><td>-13</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>Orscha</td><td>na</td><td>24,000</td><td>na</td><td>na</td><td>Retreat</td>
+              <th scope="row">Orscha</th><td>na</td><td>24,000</td><td>na</td><td>na</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>Botr<td><td>na</td><td>20,000</td><td>-14</td><td>-7</td><td>Retreat</td>
+              <th scope="row">Botr<th><td>na</td><td>20,000</td><td>-14</td><td>-7</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>Studienska (reinforcements arrive)</td><td>December 1st</td><td>50,000</td><td>-25</td><td>-13</td><td>Retreat</td>
+              <th scope="row">Studienska (reinforcements arrive)</th><td>December 1st</td><td>50,000</td><td>-25</td><td>-13</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>Minsk</td><td>December 1st</td><td>28,000</td><td>-30</td><td>-22</td><td>Retreat</td>
+              <th scope="row">Minsk</th><td>December 1st</td><td>28,000</td><td>-30</td><td>-22</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>Moloderno</td><td>December 6th</td><td>28,000</td><td>-38</td><td>-34</td><td>Retreat</td>
+              <th scope="row">Moloderno</th><td>December 6th</td><td>28,000</td><td>-38</td><td>-34</td><td>Retreat</td>
             </tr>
             <tr>
-             <td>Smorgeni</td> <td>December 7th</td><td>12,000</td><td>-33</td><td>-27</td><td>Retreat</td>
+             <th scope="row">Smorgeni</th> <td>December 7th</td><td>12,000</td><td>-33</td><td>-27</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>Wilna</td><td>na</td><td>8,000</td><td>na</td><td>na</td><td>Retreat</td>
+              <th scope="row">Wilna</td><td>na</th><td>8,000</td><td>na</td><td>na</td><td>Retreat</td>
             </tr>
             <tr>
-              <td>Kowno (reinforcements arrive)</td><td>December 14th</td><td>10,000</td><td>na</td><td>na</td><td>Retreat</td>
+              <th scope="row">Kowno (reinforcements arrive)</th><td>December 14th</td><td>10,000</td><td>na</td><td>na</td><td>Retreat</td>
             </tr>
           </tbody>
         </table>
