--- a/examples/hide-show/hide-show-1/hide-show-1.html
+++ b/examples/hide-show/hide-show-1/hide-show-1.html
@@ -89,7 +89,7 @@
               <th scope="row">Orscha</th><td>na</td><td>24,000</td><td>na</td><td>na</td><td>Retreat</td>
             </tr>
             <tr>
-              <th scope="row">Botr<th><td>na</td><td>20,000</td><td>-14</td><td>-7</td><td>Retreat</td>
+              <th scope="row">Botr</th><td>na</td><td>20,000</td><td>-14</td><td>-7</td><td>Retreat</td>
             </tr>
             <tr>
               <th scope="row">Studienska (reinforcements arrive)</th><td>December 1st</td><td>50,000</td><td>-25</td><td>-13</td><td>Retreat</td>
