Updated checkbox examples to not support enter key to change state

--- a/examples/checkbox/checkbox-1/checkbox-1.html
+++ b/examples/checkbox/checkbox-1/checkbox-1.html
@@ -75,7 +75,7 @@
             </td>
           </tr>
             <tr>
-              <th><kbd>Space</kbd>, <br/> or <kbd>Enter</kbd></th>
+              <th><kbd>Space</kbd></th>
               <td>
                 <ul>
                   <li>Toggle check checkbox between checked and unchecked.</li>  
