--- a/examples/checkbox/checkbox-2/checkbox-2.html
+++ b/examples/checkbox/checkbox-2/checkbox-2.html
@@ -109,7 +109,7 @@
               </td>
             </tr>
             <tr>
-              <th><kbd>Space</kbd>, <br/> or <kbd>Enter</kbd></th>
+              <th><kbd>Space</kbd></th>
               <td>
                 <ul>
                   <li>Toggle the checkbox between unchecked, mixed and checked.</li>
